JAVA: 전체적인 주석 정리 및 업데이트